# deCoreML

./: README.md  decoreml.py  pyproject.toml
decoreml/: cli.py
