[tool.poetry]
name = "deCoreML"
version = "0.2.0"
description = "Find out why your CoreML model isn't running on the ANE!"
authors = ["FL33TW00D <chris@fleetwood.dev>"]

[tool.poetry.dependencies]
python = "^3.7"
rich = "^13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
decoreml = "decoreml.cli:main"
